- Implemented STIMER, NMIST and NMIRES hardware registers.
- Made the CONSOL register readable.
- Fixed and optimized undocumented 6502 instructions.

Usability improvements;;
- Conversion to Atari executables (XEX format, also known as COM).
- RMT files can be extracted from SAP files created in Raster Music Tracker.
- Implemented subsongs, seek bar and pause in the Android port.
- Added a date picker in the WASAP/Winamp/Apollo/XMPlay file information dialogs.
- Browser JavaScript player works on `file:///` URLs.
- `asapscan` uses a much faster length detection algorithm.

Bug fixes;;
- Many important fixes in the Audacious plugin.
- Many fixes in the Android port.

Cleanup;;
- Rewritten ASAP core to the http://cito.sourceforge.net[Ć programming language].
- Removed `defaultPlaybackTime` and `loopPlaybackTime` parameters
from applet, Flash Player and Silverlight interfaces.


ASAP 2.1.2 (2010-11-03)::

There are new ports: Android, Audacious plugin, Silverlight and a simple
command-line player using SDL. WASAP has been ported to Windows CE.
There's a new CAB package for Windows CE.
Re-running WASAP opens the file selector.
JavaScript ASAP2WAV now works in Rhino Shell, Google V8 shell,
JScript.NET and JaegerMonkey.
A slight fix and an optimization have been applied to 6502 emulation.
"Show information about the currently playing file" is now available in XMPlay
and has been fixed in Winamp.


ASAP 2.1.1 (2010-05-05)::

The SAP file format has been extended with the "NTSC" tag.
A BASS add-on (works in AIMP) has been created. A crash in XMPlay
has been fixed. The XMMS plugin now works correctly on big endian machines.
There's a new Windows Explorer extension which displays metadata
(title, author, year, duration, mono/stereo, number of subsongs, PAL/NTSC)
and on Windows Vista/7 can edit them. A simple player in C# has been created.


ASAP 2.1.0 (2010-02-02)::

ASAP2WAV has been replaced with asapconv which can additionally