@@ -20,7 +20,8 @@ Usability improvements;;
 - Conversion to Atari executables (XEX format, also known as COM).
 - RMT files can be extracted from SAP files created in Raster Music Tracker.
 - Implemented subsongs, seek bar and pause in the Android port.
-- Added a date picker in the WASAP/Winamp/Apollo/XMPlay file information dialogs.
+- Added a date picker in the WASAP/Winamp/Apollo/XMPlay file information window.
+- The FASTPLAY tag can be up to 32767 (previously 312).
 - Browser JavaScript player works on `file:///` URLs.
 - `asapscan` uses a much faster length detection algorithm.
 
